fix: Plan 조회 시 N+1 쿼리 문제 해결